# mvs-texturing

./: CMakeLists.txt  CMakeSettings.json  README.md  README_CHINESE.md
apps/texrecon/: CMakeLists.txt  texrecon.cpp
elibs/: CMakeLists.txt
libs/: CMakeLists.txt
libs/mve/: CMakeLists.txt
libs/mve/libs/: CMakeLists.txt
libs/mve/libs/math/: CMakeLists.txt
libs/mve/libs/mve/: CMakeLists.txt  Makefile.dep
libs/mve/libs/util/: CMakeLists.txt  system.h
libs/tex/: CMakeLists.txt  calculate_data_costs.cpp  generate_debug_embeddings.cpp  generate_texture_atlases.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  global_seam_leveling.cpp  local_seam_leveling.cpp  partition_mesh.cpp
